tests/snapshots/render_test__tests__flash_message_wrapping_narrow.snap
---
source: tests/render_test.rs
expression: output
---
                                        
                                        
                                        
                                        
Copied npub to clipboard:               
npub1rfs5zsr4v2qjizw8a8x2gvxgeamshcuam  
5y9v9m2ysg47mwue98q4v5je3               
┌INPUT─────────────────────────────────┐
│                                      │
└──────────────────────────────────────┘
